# skinify

./: .gitmodules  CMakeLists.txt  README.md
scripts/: dev.bat
src/: Main.cpp  image.h  main.cpp  skinify.cpp  skinify.h  skinify.hpp
src/core/: Image.cpp  Image.hpp  Skinify.cpp  Skinify.hpp  image.cpp  image.h  image.hpp
src/interface/: ImGui-Custom.cpp  ImGui-Custom.hpp  ImGui.cpp  ImGui.hpp  Ui.cpp  Ui.hpp  imGui.cpp  imGui.h  imGui.hpp  ui.cpp  ui.h  ui.hpp
